thought i fixed z-index of content already

--- a/src/style.styl
+++ b/src/style.styl
@@ -176,6 +176,7 @@ body.flash #flash_wrapper
   transition margin-left 650ms
   position fixed
   top 40px
+  z-index 19 !important
 
 #nav
   z-index 20 !important
